[tool.poetry]
name = "stockscreener"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.10"
yfinance = "^0.2.18"
jinja2 = "^3.1.2"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
